--- a/assets/css/new_index.css
+++ b/assets/css/new_index.css
@@ -893,6 +893,7 @@ footer.rodape {
   }
   
   .hero-carousel {
+    padding-top: 20px;
     height: 250px;
     max-width: 100%;
     position: relative;
